--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -82,6 +82,75 @@ img {
 }
 
 /*=============== HEADER & NAV ===============*/
+.header {
+ position: fixed;
+ width: 100%;
+ top: 0;
+ left: 0;
+ background-color: var(--body-color);
+ z-index: var(--z-fixed);
+
+ }
+
+ .nav {
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+
+ }
+ .nav_menu {
+  display: flex;
+  align-items: center;
+  column-gap: 4.5rem;
+  width: 60%;
+
+ }
+
+ .nav_list {
+  margin-left: auto;
+  display: flex;
+  flex-direction: row;
+  row-gap: 2.5rem;
+
+ }
+ 
+ .nav_link {
+  color: var(--text-color);
+  font-weight: var(--font-semi-bold);
+  gap: 2.5rem;
+  width: 60%;
+
+ }
+
+ .nav_button {
+  display: inline-block;
+  width: max-content;
+  background-color: var(--body-color);
+  color: var(--title-color);
+  border: 2px solid var(--text-color);
+  padding: 1rem 3rem;
+  border-radius: 4rem;
+
+ }
+
+ .nav_logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--text-color);
+  column-gap: .5rem;
+  font-weight: var(--font-semi-bold);
+
+ }
+
+ .nav_logo i {
+  font-size: 1.25rem;
+  font-weight: initial;
+
+
+ }
 
 
 /* Navigation for mobile devices */
